@startuml

title __INPUTS's Class Diagram__\n

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.Inputs {
          + stateVariables : JSONObject
          + Inputs()
          + onCameraFrame()
          + onCameraViewStarted()
          + onCameraViewStopped()
          - initializeStateVariables()
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.MotionSensors {
          ~ dt : double
          ~ indexHistoryOldest : int
          ~ pythonSensorTimeSteps : float[]
          ~ pythonSensorTimer : float[]
          ~ timerCount : int
          - accelerometer : Sensor
          - accelerometer_uncalibrated : Sensor
          - angularVelocityDeg : double[]
          - angularVelocityRad : double[]
          - avgCount : int
          - delayTimeSteps : long[]
          - delayTimers : long[]
          - dtGyro : double
          - gyroscope : Sensor
          - indexCurrentGyro : int
          - indexCurrentRotation : int
          - indexPreviousGyro : int
          - indexPreviousRotation : int
          - lp_freq_theta : double
          - lp_freq_thetaDot : double
          - orientation : float[]
          - rotationMatrix : float[]
          - rotationMatrixRemap : float[]
          - rotation_sensor : Sensor
          - sensorChangeCountGyro : int
          - sensorChangeCountRotation : int
          - sensorManager : SensorManager
          - thetaDeg : double[]
          - thetaDotGyro : double[]
          - thetaDotGyroDeg : double[]
          - thetaRad : double[]
          - theta_uncalibrated : float[]
          - timeStamps : long[]
          - timeStampsGyro : double[]
          - windowLength : int
          + MotionSensors()
          + getThetaDeg()
          + getThetaDegDot()
          + getThetaRad()
          + getThetaRadDot()
          + onAccuracyChanged()
          + onSensorChanged()
          + register()
          + setWindowLength()
          + unregister()
          ~ getSensorChangeCount()
          - sendToLog()
          - wrapAngle()
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.QuadEncoders {
          ~ dt_sample : double
          ~ dt_window : double
          ~ expWeight : double
          - distanceL : double
          - distanceLLP : double
          - distanceLLPPrevious : double
          - distanceLPrevious : double
          - distanceR : double
          - distanceRLP : double
          - distanceRLPPrevious : double
          - distanceRPrevious : double
          - encoderCountLeftWheel : double
          - encoderCountRightWheel : double
          - indexCurrent : int
          - indexFilterDelay : int
          - indexOldest : int
          - indexPrevious : int
          - loggerOn : boolean
          - quadCount : int
          - speedLeftWheel : double
          - speedLeftWheelLP : double
          - speedRightWheel : double
          - speedRightWheelLP : double
          - timeStamps : double[]
          - windowLength : int
          + QuadEncoders()
          + getDistanceL()
          + getDistanceR()
          + getExpWeight()
          + getWheelCountL()
          + getWheelCountR()
          + getWheelSpeedL()
          + getWheelSpeedL_LP()
          + getWheelSpeedR()
          + getWheelSpeedR_LP()
          + setExpWeight()
          + setQuadVars()
          - calcDistance()
          - exponentialAvg()
          - sendToLog()
          - setDistanceL()
          - setDistanceR()
          - setWheelSpeedL()
          - setWheelSpeedR()
      }
    }
  }
  

  jp.oist.abcvlib.inputs.Inputs .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.audio.MicrophoneInput : micInput
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.MotionSensors : motionSensors
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.QuadEncoders : quadEncoders
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.vision.Vision : vision
  jp.oist.abcvlib.inputs.MotionSensors .up.|> android.hardware.SensorEventListener
  jp.oist.abcvlib.inputs.MotionSensors o-- jp.oist.abcvlib.AbcvlibActivity : abcvlibActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
